feat(optimizer): upgrade Tier 2 patterns to production AST-mutating standard
Implemented full AST rewriting for Tier 2 patterns. Added strict semantic safety guards, NULL-safety preservation in P11 Anti-Joins, and CBO row-count gating for P03 Semi-Joins.