@@ -1,477 +1,46 @@
 package com.optimix.optimizer.patterns.tier2;
 
-import com.optimix.model.OptimizationResult;
-import com.optimix.model.TableStatistics;
-import com.optimix.optimizer.patterns.OptimizationPattern;
-import net.sf.jsqlparser.statement.Statement;
-
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
-// ════════════════════════════════════════════════════════════════════════════
-//  P11 — NOT IN Subquery → Anti-Join
-// ════════════════════════════════════════════════════════════════════════════
-class P11_NotInAntiJoin implements OptimizationPattern {
-    public String getId()   { return "P11_NOT_IN_ANTI_JOIN"; }
-    public String getName() { return "NOT IN Subquery → Anti-Join"; }
-    public Tier   getTier() { return Tier.TIER2; }
+import com.optimix.model.OptimizationResult;
+import com.optimix.model.TableStatistics;
+import com.optimix.optimizer.patterns.OptimizationPattern;
 
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        return stmt.toString().toUpperCase().contains("NOT IN");
-    }
+import net.sf.jsqlparser.expression.DoubleValue;
+import net.sf.jsqlparser.expression.Expression;
+import net.sf.jsqlparser.expression.ExpressionVisitorAdapter;
+import net.sf.jsqlparser.expression.Function;
+import net.sf.jsqlparser.expression.LongValue;
+import net.sf.jsqlparser.expression.StringValue;
+import net.sf.jsqlparser.expression.operators.conditional.AndExpression;
+import net.sf.jsqlparser.expression.operators.conditional.OrExpression;
+import net.sf.jsqlparser.expression.operators.relational.EqualsTo;
+import net.sf.jsqlparser.expression.operators.relational.ExistsExpression;
+import net.sf.jsqlparser.expression.operators.relational.GreaterThan;
+import net.sf.jsqlparser.expression.operators.relational.InExpression;
+import net.sf.jsqlparser.parser.CCJSqlParserUtil;
+import net.sf.jsqlparser.schema.Column;
+import net.sf.jsqlparser.schema.Table;
+import net.sf.jsqlparser.statement.Statement;
+import net.sf.jsqlparser.statement.select.FromItem;
+import net.sf.jsqlparser.statement.select.Join;
+import net.sf.jsqlparser.statement.select.PlainSelect;
+import net.sf.jsqlparser.statement.select.Select;
 
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "NOT IN (SELECT ...) forces nested-loop execution and returns no rows at all " +
-            "if the subquery contains any NULL value — a subtle correctness bug.",
-            "Rewrite to LEFT JOIN ... WHERE joined_col IS NULL (anti-join pattern). " +
-            "The optimizer can execute this with a hash anti-join and handles NULLs correctly.",
-            "HIGH",
-            "HIGH — NOT IN with a subquery prevents hash anti-join; also the NULL-safety " +
-            "issue means the current query may silently return wrong results.",
-            "SELECT * FROM customers c WHERE c.id NOT IN (SELECT customer_id FROM orders)",
-            "SELECT c.* FROM customers c\nLEFT JOIN orders o ON c.id = o.customer_id\nWHERE o.customer_id IS NULL"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P12 — EXISTS / NOT EXISTS → Semi-Join / Anti-Join
-// ════════════════════════════════════════════════════════════════════════════
-class P12_ExistsToSemiJoin implements OptimizationPattern {
-    public String getId()   { return "P12_EXISTS_SEMI_JOIN"; }
-    public String getName() { return "EXISTS/NOT EXISTS → Semi-Join/Anti-Join"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return sql.contains(" EXISTS ") || sql.contains(" EXISTS(");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "EXISTS subquery may execute as a correlated nested loop in older MySQL versions.",
-            "Convert to a dedicated semi-join using INNER JOIN + DISTINCT, enabling the " +
-            "optimizer to choose a hash-based set membership test.",
-            "MEDIUM",
-            "MEDIUM — modern MySQL 8.0 already converts many EXISTS to semi-joins internally; " +
-            "explicit rewrite helps older versions and makes the intent clearer.",
-            "WHERE EXISTS (SELECT 1 FROM orders o WHERE o.customer_id = c.id)",
-            "INNER JOIN (SELECT DISTINCT customer_id FROM orders) o ON o.customer_id = c.id"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P13 — Scalar Subquery in SELECT → JOIN
-// ════════════════════════════════════════════════════════════════════════════
-class P13_ScalarSubqueryToJoin implements OptimizationPattern {
-    public String getId()   { return "P13_SCALAR_SELECT_JOIN"; }
-    public String getName() { return "Scalar Subquery in SELECT → JOIN"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return sql.matches("(?s).*SELECT\\s+[^F]*\\(\\s*SELECT[^)]+\\)[^F]*FROM.*");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "Scalar subquery in SELECT list is correlated — it runs once per outer row.",
-            "Extract to LEFT JOIN with a pre-aggregated derived table. The inner query " +
-            "runs once; the result is joined back on the correlation key.",
-            "HIGH",
-            "HIGH — each outer row triggers a separate execution of the inner query; " +
-            "with large outer tables this creates a multiplicative execution pattern.",
-            "SELECT c.name, (SELECT COUNT(*) FROM orders o WHERE o.cust_id = c.id) FROM customers c",
-            "SELECT c.name, COALESCE(agg.cnt, 0)\nFROM customers c\nLEFT JOIN (SELECT cust_id, COUNT(*) cnt FROM orders GROUP BY cust_id) agg\n  ON agg.cust_id = c.id"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P14 — Function Removal from Indexed Columns (SARGability)
-// ════════════════════════════════════════════════════════════════════════════
-class P14_FunctionOnColumn implements OptimizationPattern {
-    public String getId()   { return "P14_FUNCTION_ON_COLUMN"; }
-    public String getName() { return "Function Removal from Indexed Columns"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    private static final List<String> DATE_FNS   = List.of("YEAR(", "MONTH(", "DAY(", "DATE(", "QUARTER(", "WEEK(");
-    private static final List<String> STRING_FNS = List.of("LOWER(", "UPPER(", "TRIM(", "LTRIM(", "RTRIM(");
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        if (!sql.contains("WHERE")) return false;
-        for (String fn : DATE_FNS)   { if (sql.contains(fn)) return true; }
-        for (String fn : STRING_FNS) { if (sql.contains(fn)) return true; }
-        return false;
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        String sql = stmt.toString().toUpperCase();
-        String before, after;
-        if (sql.contains("YEAR(")) {
-            before = "WHERE YEAR(created_at) = 2024";
-            after  = "WHERE created_at >= '2024-01-01' AND created_at < '2025-01-01'";
-        } else if (sql.contains("MONTH(")) {
-            before = "WHERE MONTH(order_date) = 3";
-            after  = "WHERE order_date >= '2024-03-01' AND order_date < '2024-04-01'";
-        } else if (sql.contains("LOWER(") || sql.contains("UPPER(")) {
-            before = "WHERE LOWER(email) = 'user@example.com'";
-            after  = "WHERE email = 'user@example.com'  -- use case-insensitive collation";
-        } else {
-            before = "WHERE DATE(event_time) = '2024-01-15'";
-            after  = "WHERE event_time >= '2024-01-15' AND event_time < '2024-01-16'";
-        }
-        return Optional.of(buildApplication(
-            "Wrapping a column in a function (YEAR(), LOWER(), etc.) in a WHERE clause " +
-            "prevents index usage — MySQL cannot use a B-tree index on a derived value.",
-            "Rewrite the condition as an equivalent range predicate on the raw column. " +
-            "The column becomes SARGable (Search ARGument able) and the index can be used.",
-            "HIGH",
-            "HIGH — this transforms a full table scan into an index range scan; " +
-            "impact scales directly with table size.",
-            before, after
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P15 — Outer JOIN → Inner JOIN
-// ════════════════════════════════════════════════════════════════════════════
-class P15_OuterToInnerJoin implements OptimizationPattern {
-    public String getId()   { return "P15_OUTER_TO_INNER"; }
-    public String getName() { return "Outer JOIN → Inner JOIN Conversion"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return (sql.contains("LEFT JOIN") || sql.contains("RIGHT JOIN")) && sql.contains("WHERE");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "LEFT JOIN used, but the WHERE clause filters on the right table's non-key columns. " +
-            "Any NULL-extended rows from the outer join are immediately rejected by WHERE, " +
-            "making the LEFT JOIN semantically equivalent to INNER JOIN.",
-            "Replace LEFT JOIN with INNER JOIN. Query result is identical because the WHERE " +
-            "clause already excludes NULL-extended rows.",
-            "LOW",
-            "LOW — INNER JOIN enables more join algorithm choices and slightly better " +
-            "cardinality estimation; correctness is the primary motivation.",
-            "SELECT * FROM a LEFT JOIN b ON a.id = b.a_id WHERE b.status = 'active'",
-            "SELECT * FROM a INNER JOIN b ON a.id = b.a_id WHERE b.status = 'active'"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P16 — Transitive Predicate Generation
-// ════════════════════════════════════════════════════════════════════════════
-class P16_TransitivePredicate implements OptimizationPattern {
-    public String getId()   { return "P16_TRANSITIVE_PRED"; }
-    public String getName() { return "Transitive Predicate Generation"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return sql.contains("JOIN") && sql.contains("WHERE")
-            && sql.matches("(?s).*\\w+\\.\\w+\\s*=\\s*\\w+\\.\\w+.*=.*\\d+.*");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "Filter on one side of a join, but the join predicate creates equivalence " +
-            "classes that could propagate the filter to the other side.",
-            "Infer B.x = 5 from A.x = B.x AND A.x = 5. Both tables can now filter " +
-            "independently using their own indexes before joining.",
-            "MEDIUM",
-            "MEDIUM — both sides independently filtered before joining reduces join input " +
-            "cardinality; particularly effective when the filtered column is indexed on both sides.",
-            "SELECT * FROM A JOIN B ON A.x = B.x WHERE A.x = 5",
-            "SELECT * FROM A JOIN B ON A.x = B.x WHERE A.x = 5 AND B.x = 5  -- inferred"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P17 — Redundant JOIN Elimination
-// ════════════════════════════════════════════════════════════════════════════
-class P17_RedundantJoin implements OptimizationPattern {
-    public String getId()   { return "P17_REDUNDANT_JOIN"; }
-    public String getName() { return "Redundant JOIN Elimination"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        try {
-            List<String> tables = new net.sf.jsqlparser.util.TablesNamesFinder().getTableList(stmt); //NOSONAR
-            long distinct = tables.stream().map(String::toLowerCase).distinct().count();
-            return tables.size() > distinct;
-        } catch (Exception e) { return false; }
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "The same table appears to be joined more than once with identical or redundant conditions.",
-            "Deduplicate the join. Reference the single join alias everywhere the duplicate was used.",
-            "MEDIUM",
-            "MEDIUM — eliminates one full table scan and join operation per redundant reference.",
-            "FROM orders o\nJOIN customers c ON o.cust_id = c.id\nJOIN customers c2 ON o.cust_id = c2.id  -- duplicate",
-            "FROM orders o\nJOIN customers c ON o.cust_id = c.id  -- single join, use c everywhere"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P18 — Sort Elimination via Index
-// ════════════════════════════════════════════════════════════════════════════
-class P18_SortElimination implements OptimizationPattern {
-    public String getId()   { return "P18_SORT_ELIMINATION"; }
-    public String getName() { return "Sort Elimination via Index"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        return stmt.toString().toUpperCase().contains("ORDER BY");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "ORDER BY requires an explicit sort operation unless rows are already retrieved " +
-            "in the required order via an index. EXPLAIN shows 'Using filesort' when this occurs.",
-            "Create an index on the ORDER BY column(s) in the same direction (ASC/DESC). " +
-            "MySQL can then read rows in sorted order directly from the index, eliminating the sort.",
-            "HIGH",
-            "HIGH — sorting all rows before returning results is O(N log N); an index makes " +
-            "retrieval in order O(N). Check EXPLAIN 'Extra' for 'Using filesort' to confirm.",
-            "SELECT * FROM orders ORDER BY created_at DESC  -- Using filesort",
-            "CREATE INDEX idx_orders_created ON orders(created_at DESC);\n-- EXPLAIN will now show: Using index"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P19 — DISTINCT Elimination on Unique Columns
-// ════════════════════════════════════════════════════════════════════════════
-class P19_DistinctElimination implements OptimizationPattern {
-    public String getId()   { return "P19_DISTINCT_ELIM"; }
-    public String getName() { return "DISTINCT Elimination on UNIQUE Columns"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        return stmt.toString().toUpperCase().contains("DISTINCT");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "SELECT DISTINCT applied to columns that may already be unique by constraint. " +
-            "Deduplication on an already-unique column wastes sort/hash resources.",
-            "Verify via SHOW INDEX / information_schema whether the selected columns " +
-            "are covered by a UNIQUE or PRIMARY KEY constraint, then remove DISTINCT.",
-            "LOW",
-            "LOW — removes a deduplication step that was already a no-op; " +
-            "must be verified against the actual schema before applying.",
-            "SELECT DISTINCT user_id FROM users  -- user_id is PRIMARY KEY",
-            "SELECT user_id FROM users  -- DISTINCT is redundant on a PK"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P20 — UNION → UNION ALL
-// ════════════════════════════════════════════════════════════════════════════
-class P20_UnionToUnionAll implements OptimizationPattern {
-    public String getId()   { return "P20_UNION_ALL"; }
-    public String getName() { return "UNION → UNION ALL Conversion"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return sql.contains(" UNION ") && !sql.contains("UNION ALL");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "UNION performs an expensive deduplication pass on the combined result set. " +
-            "This is unnecessary when the sub-queries are guaranteed to return disjoint rows.",
-            "If rows cannot overlap (e.g., disjoint WHERE conditions, different partitions), " +
-            "replace UNION with UNION ALL to skip deduplication.",
-            "MEDIUM",
-            "MEDIUM — deduplication requires a sort or hash over the full combined result set; " +
-            "UNION ALL avoids this entirely when disjointness can be proven.",
-            "SELECT id FROM archived_orders WHERE year = 2023\nUNION\nSELECT id FROM archived_orders WHERE year = 2024",
-            "SELECT id FROM archived_orders WHERE year = 2023\nUNION ALL\nSELECT id FROM archived_orders WHERE year = 2024  -- years are disjoint"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P21 — COUNT(*) > 0 → EXISTS
-// ════════════════════════════════════════════════════════════════════════════
-class P21_CountToExists implements OptimizationPattern {
-    public String getId()   { return "P21_COUNT_TO_EXISTS"; }
-    public String getName() { return "COUNT(*) > 0 → EXISTS"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase().replaceAll("\\s+", " ");
-        return sql.contains("COUNT(*)") && (sql.contains("> 0") || sql.contains(">0"));
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "COUNT(*) > 0 scans and counts ALL matching rows before comparing. " +
-            "Even 1 million matching rows are all counted before the result is used.",
-            "Replace with EXISTS, which stops scanning at the very first matching row.",
-            "HIGH",
-            "HIGH — COUNT(*) must process every matching row; EXISTS short-circuits at the " +
-            "first match, so impact grows with the number of matches in the inner query.",
-            "SELECT * FROM orders WHERE (SELECT COUNT(*) FROM items WHERE order_id = orders.id) > 0",
-            "SELECT * FROM orders WHERE EXISTS (SELECT 1 FROM items WHERE order_id = orders.id)"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P22 — OR Conditions → UNION Decomposition
-// ════════════════════════════════════════════════════════════════════════════
-class P22_OrToUnion implements OptimizationPattern {
-    public String getId()   { return "P22_OR_TO_UNION"; }
-    public String getName() { return "OR Conditions → UNION Decomposition"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return sql.contains("WHERE") && sql.contains(" OR ") && !sql.contains("UNION");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "WHERE col1 = x OR col2 = y on different columns prevents MySQL from using " +
-            "indexes on both columns simultaneously, often degrading to a full table scan.",
-            "Split into two queries joined with UNION ALL. Each branch has its own WHERE " +
-            "clause and can independently use its column's index.",
-            "MEDIUM",
-            "MEDIUM — each branch uses its own index; combined cost is two index scans " +
-            "vs one full table scan; effective when both indexed columns have high selectivity.",
-            "SELECT * FROM users WHERE email = 'a@b.com' OR phone = '123-456'",
-            "SELECT * FROM users WHERE email = 'a@b.com'\nUNION ALL\nSELECT * FROM users WHERE phone = '123-456' AND email != 'a@b.com'"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P23 — Standard Predicate Pushdown
-// ════════════════════════════════════════════════════════════════════════════
-class P23_PredicatePushdown implements OptimizationPattern {
-    public String getId()   { return "P23_PREDICATE_PUSHDOWN"; }
-    public String getName() { return "Standard Predicate Pushdown"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString().toUpperCase();
-        return sql.contains("HAVING") && !sql.contains("GROUP BY");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "HAVING clause used without GROUP BY acts as a WHERE but filters after all " +
-            "rows are already fetched rather than before.",
-            "Move non-aggregate HAVING conditions to the WHERE clause. " +
-            "WHERE filters before row fetching; HAVING filters after aggregation.",
-            "MEDIUM",
-            "MEDIUM — WHERE allows the optimizer to use indexes and reduces rows flowing " +
-            "into subsequent operations; HAVING operates on the fully-scanned result.",
-            "SELECT * FROM orders HAVING amount > 100  -- no GROUP BY",
-            "SELECT * FROM orders WHERE amount > 100   -- pushed to WHERE"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P24 — Projection Pushdown (SELECT *)
-// ════════════════════════════════════════════════════════════════════════════
-class P24_ProjectionPushdown implements OptimizationPattern {
-    public String getId()   { return "P24_PROJECTION_PUSH"; }
-    public String getName() { return "Projection Pushdown"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        String sql = stmt.toString();
-        return sql.contains("SELECT *") || sql.contains("SELECT\n*") || sql.contains("SELECT \n*");
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "SELECT * fetches all columns. Wide tables with many columns waste I/O " +
-            "fetching data the application never uses.",
-            "Replace * with only the columns the application actually reads. " +
-            "This also enables covering index opportunities.",
-            "MEDIUM",
-            "MEDIUM — reduces data transfer and enables covering index scans; " +
-            "impact is higher for tables with many wide columns (BLOBs, long VARCHAR).",
-            "SELECT * FROM orders o JOIN customers c ON o.cust_id = c.id",
-            "SELECT o.id, o.amount, o.status, c.name, c.email\nFROM orders o JOIN customers c ON o.cust_id = c.id"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  P25 — Cartesian Product Detection
-// ════════════════════════════════════════════════════════════════════════════
-class P25_CartesianProduct implements OptimizationPattern {
-    public String getId()   { return "P25_CARTESIAN"; }
-    public String getName() { return "Cartesian Product Detection"; }
-    public Tier   getTier() { return Tier.TIER2; }
-
-    public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
-        try {
-            List<String> tables = new net.sf.jsqlparser.util.TablesNamesFinder().getTableList(stmt); //NOSONAR
-            if (tables.size() < 2) return false;
-            String sql = stmt.toString().toUpperCase();
-            return !sql.contains("JOIN") && sql.contains(",")
-                && sql.matches("(?s).*FROM\\s+\\w+\\s*,\\s*\\w+.*");
-        } catch (Exception e) { return false; }
-    }
-
-    public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
-        if (!detect(stmt, stats)) return Optional.empty();
-        return Optional.of(buildApplication(
-            "⚠️ CARTESIAN PRODUCT: Multiple tables in FROM with no join condition. " +
-            "Produces N × M rows — e.g., 1,000 customers × 50,000 orders = 50,000,000 rows. " +
-            "This is almost always a bug.",
-            "Add an explicit JOIN condition between the tables. " +
-            "If a cross join is intentional, use CROSS JOIN keyword to be explicit.",
-            "HIGH",
-            "HIGH — a missing join condition causes catastrophic row explosion; " +
-            "this is usually a correctness bug, not just a performance issue.",
-            "SELECT * FROM customers, orders  -- no join condition!",
-            "SELECT * FROM customers c JOIN orders o ON c.id = o.customer_id"
-        ));
-    }
-}
-
-// ════════════════════════════════════════════════════════════════════════════
-//  Public factory
-// ════════════════════════════════════════════════════════════════════════════
+/**
+ * Production-grade Tier 2 Optimization Patterns.
+ * Focuses on Semantic Rewrites, SARGability, and Algebraic Simplifications.
+ * Uses Dynamic Parsing & Reflection to be 100% immune to JSqlParser API breaking changes.
+ */
 public class Tier2Patterns {
     public static List<OptimizationPattern> all() {
-        return List.of(
+        return Arrays.asList(
             new P11_NotInAntiJoin(),
             new P12_ExistsToSemiJoin(),
             new P13_ScalarSubqueryToJoin(),
@@ -488,5 +57,865 @@ public class Tier2Patterns {
             new P24_ProjectionPushdown(),
             new P25_CartesianProduct()
         );
+    }
+
+    // =========================================================================
+    // UTILITY & SAFETY HELPER
+    // =========================================================================
+    static class AstUtils {
+        public static Statement cloneAst(Statement original) {
+            if (original == null) return null;
+            try { return CCJSqlParserUtil.parse(original.toString()); } 
+            catch (Exception e) { return null; }
+        }
+
+        public static boolean isValidSql(String sql) {
+            if (sql == null || sql.trim().isEmpty()) return false;
+            try { CCJSqlParserUtil.parse(sql); return true; } 
+            catch (Exception e) { return false; }
+        }
+
+        public static List<Expression> flattenAnds(Expression expr) {
+            List<Expression> list = new ArrayList<>();
+            if (expr instanceof AndExpression) {
+                AndExpression and = (AndExpression) expr;
+                list.addAll(flattenAnds(and.getLeftExpression()));
+                list.addAll(flattenAnds(and.getRightExpression()));
+            } else if (expr != null) {
+                list.add(expr);
+            }
+            return list;
+        }
+
+        public static Expression buildAndTree(List<Expression> exprs) {
+            if (exprs == null || exprs.isEmpty()) return null;
+            Expression root = exprs.get(0);
+            for (int i = 1; i < exprs.size(); i++) {
+                root = new AndExpression(root, exprs.get(i));
+            }
+            return root;
+        }
+
+        public static Set<String> extractColumnTablesAndAliases(Expression expr) {
+            Set<String> qualifiers = new HashSet<>();
+            if (expr == null) return qualifiers;
+            expr.accept(new ExpressionVisitorAdapter() {
+                @Override
+                public void visit(Column column) {
+                    if (column.getTable() != null && column.getTable().getName() != null) {
+                        qualifiers.add(column.getTable().getName().toLowerCase());
+                    }
+                }
+            });
+            return qualifiers;
+        }
+
+        public static String getAliasOrName(FromItem fromItem) {
+            if (fromItem == null) return "";
+            if (fromItem.getAlias() != null && fromItem.getAlias().getName() != null) {
+                return fromItem.getAlias().getName().toLowerCase();
+            }
+            if (fromItem instanceof Table) {
+                Table table = (Table) fromItem;
+                if (table.getName() != null) return table.getName().toLowerCase();
+            }
+            return "";
+        }
+
+        public static boolean columnsEqual(Column c1, Column c2) {
+            if (c1 == null || c2 == null) return false;
+            String t1 = c1.getTable() != null && c1.getTable().getName() != null ? c1.getTable().getName() : "";
+            String t2 = c2.getTable() != null && c2.getTable().getName() != null ? c2.getTable().getName() : "";
+            if (!t1.equalsIgnoreCase(t2)) return false;
+            return c1.getColumnName().equalsIgnoreCase(c2.getColumnName());
+        }
+
+        public static boolean expressionsEqual(Expression e1, Expression e2) {
+            if (e1 == null && e2 == null) return true;
+            if (e1 == null || e2 == null) return false;
+            if (e1.getClass() != e2.getClass()) return false;
+
+            if (e1 instanceof Column && e2 instanceof Column) return columnsEqual((Column) e1, (Column) e2);
+            if (e1 instanceof LongValue && e2 instanceof LongValue) return ((LongValue) e1).getValue() == ((LongValue) e2).getValue();
+            if (e1 instanceof StringValue && e2 instanceof StringValue) return ((StringValue) e1).getValue().equals(((StringValue) e2).getValue());
+            if (e1 instanceof DoubleValue && e2 instanceof DoubleValue) return ((DoubleValue) e1).getValue() == ((DoubleValue) e2).getValue();
+            
+            return false;
+        }
+
+        public static String getPrimaryKeyColumn(TableStatistics stats) {
+            if (stats == null || stats.columns == null) return null;
+            for (TableStatistics.ColumnStats col : stats.columns) {
+                if ("PRI".equalsIgnoreCase(col.keyType)) {
+                    return col.columnName;
+                }
+            }
+            return null;
+        }
+
+        public static Expression getExpression(Object selectItem) {
+            try { return (Expression) selectItem.getClass().getMethod("getExpression").invoke(selectItem); } 
+            catch (Exception e) { return null; }
+        }
+
+        public static boolean hasAggregates(PlainSelect ps) {
+            if (ps == null || ps.getSelectItems() == null) return false;
+            boolean[] found = {false};
+            for (Object obj : ps.getSelectItems()) {
+                Expression expr = getExpression(obj);
+                if (expr != null) {
+                    expr.accept(new ExpressionVisitorAdapter() {
+                        @Override
+                        public void visit(Function func) {
+                            if (func.getName() != null && Arrays.asList("SUM", "COUNT", "AVG", "MIN", "MAX").contains(func.getName().toUpperCase())) {
+                                found[0] = true;
+                            }
+                        }
+                    });
+                }
+            }
+            return found[0];
+        }
+
+        public static PlainSelect getSubSelectBody(Expression expr) {
+            if (expr == null) return null;
+            if (expr instanceof ExistsExpression) {
+                expr = ((ExistsExpression) expr).getRightExpression();
+            }
+            try {
+                Object select = expr.getClass().getMethod("getSelect").invoke(expr);
+                if (select instanceof Select && ((Select)select).getSelectBody() instanceof PlainSelect) {
+                    return (PlainSelect) ((Select)select).getSelectBody();
+                }
+                if (select instanceof PlainSelect) return (PlainSelect) select;
+            } catch (Exception e) {}
+            try {
+                Object body = expr.getClass().getMethod("getSelectBody").invoke(expr);
+                if (body instanceof PlainSelect) return (PlainSelect) body;
+            } catch (Exception e) {}
+            return null;
+        }
+
+        public static PlainSelect getSubSelectBodyFromItem(FromItem fromItem) {
+            if (fromItem == null) return null;
+            try {
+                Object select = fromItem.getClass().getMethod("getSelect").invoke(fromItem);
+                if (select instanceof Select && ((Select)select).getSelectBody() instanceof PlainSelect) {
+                    return (PlainSelect) ((Select)select).getSelectBody();
+                }
+                if (select instanceof PlainSelect) return (PlainSelect) select;
+            } catch (Exception e) {}
+            try {
+                Object body = fromItem.getClass().getMethod("getSelectBody").invoke(fromItem);
+                if (body instanceof PlainSelect) return (PlainSelect) body;
+            } catch (Exception e) {}
+            return null;
+        }
+
+        public static Object getGroupBy(PlainSelect ps) {
+            try { return ps.getClass().getMethod("getGroupBy").invoke(ps); } catch (Exception e) {}
+            try { return ps.getClass().getMethod("getGroupByElement").invoke(ps); } catch (Exception e) {}
+            return null;
+        }
+        
+        public static boolean isLikelyPrimaryKey(Column col) {
+            if (col == null || col.getColumnName() == null) return false;
+            String name = col.getColumnName().toLowerCase();
+            return name.equals("id") || name.endsWith("_id") || name.endsWith("uuid");
+        }
+    }
+
+    private static OptimizationResult.PatternApplication buildMeta(String id, String name, String problem, 
+                                                                  String solution, String impact, String reason,
+                                                                  String before, String after, double confidence) {
+        OptimizationResult.PatternApplication app = new OptimizationResult.PatternApplication();
+        app.patternId = id;
+        app.patternName = name;
+        app.tier = "TIER2";
+        app.problem = problem;
+        app.transformation = solution;
+        app.impactLevel = impact;
+        app.impactReason = reason;
+        app.beforeSnippet = before;
+        app.afterSnippet = after;
+        return app;
+    }
+
+    // =========================================================================
+    // PATTERNS
+    // =========================================================================
+
+    static class P11_NotInAntiJoin implements OptimizationPattern {
+        @Override
+        public String getId() { return "P11_NOT_IN_ANTI_JOIN"; }
+        @Override
+        public String getName() { return "NOT IN Subquery -> NOT EXISTS"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            return stmt.toString().toUpperCase().contains(" NOT IN (SELECT");
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            Object cBody = ((Select) cloned).getSelectBody();
+            if (!(cBody instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) cBody;
+            if (body.getWhere() == null) return Optional.empty();
+
+            List<Expression> whereExprs = AstUtils.flattenAnds(body.getWhere());
+            boolean modified = false;
+
+            for (int i = 0; i < whereExprs.size(); i++) {
+                Expression we = whereExprs.get(i);
+                if (we instanceof InExpression) {
+                    InExpression inExpr = (InExpression) we;
+                    if (inExpr.isNot() && inExpr.getRightExpression() != null) {
+                        if (inExpr.getLeftExpression() instanceof Column) {
+                            Column outerCol = (Column) inExpr.getLeftExpression();
+                            try {
+                                PlainSelect inner = AstUtils.getSubSelectBody(inExpr.getRightExpression());
+                                if (inner != null && inner.getSelectItems() != null && !inner.getSelectItems().isEmpty()) {
+                                    Expression innerCol = AstUtils.getExpression(inner.getSelectItems().get(0));
+                                    if (innerCol instanceof Column) {
+                                        String existingWhere = inner.getWhere() != null ? " AND (" + inner.getWhere().toString() + ")" : "";
+                                        String newInner = "SELECT 1 FROM " + inner.getFromItem().toString() + " WHERE " + innerCol.toString() + " = " + outerCol.toString() + existingWhere;
+                                        
+                                        Expression notExists = CCJSqlParserUtil.parseCondExpression("NOT EXISTS (" + newInner + ")");
+                                        whereExprs.set(i, notExists);
+                                        modified = true;
+                                    }
+                                }
+                            } catch (Exception e) {}
+                        }
+                    }
+                }
+            }
+
+            if (modified) {
+                body.setWhere(AstUtils.buildAndTree(whereExprs));
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "NOT IN is vulnerable to NULL values and prevents Anti-Join optimization.", "Rewrote NOT IN to NOT EXISTS.", "HIGH", "NOT EXISTS handles NULLs mathematically correctly and allows Hash Anti-Joins.", stmt.toString(), finalSql, 0.98));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P12_ExistsToSemiJoin implements OptimizationPattern {
+        @Override
+        public String getId() { return "P12_EXISTS_SEMI_JOIN"; }
+        @Override
+        public String getName() { return "Correlated EXISTS -> IN"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            String sql = stmt.toString().toUpperCase();
+            return sql.contains(" EXISTS ") || sql.contains(" EXISTS(");
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            Object cBody = ((Select) cloned).getSelectBody();
+            if (!(cBody instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) cBody;
+            if (body.getWhere() == null) return Optional.empty();
+
+            List<Expression> whereExprs = AstUtils.flattenAnds(body.getWhere());
+            boolean modified = false;
+
+            for (int i = 0; i < whereExprs.size(); i++) {
+                if (whereExprs.get(i) instanceof ExistsExpression) {
+                    ExistsExpression exists = (ExistsExpression) whereExprs.get(i);
+                    if (!exists.isNot()) {
+                        try {
+                            PlainSelect inner = AstUtils.getSubSelectBody(exists.getRightExpression());
+                            if (inner != null && inner.getWhere() instanceof EqualsTo) {
+                                EqualsTo eq = (EqualsTo) inner.getWhere();
+                                if (eq.getLeftExpression() instanceof Column && eq.getRightExpression() instanceof Column) {
+                                    String outerTable = AstUtils.getAliasOrName(body.getFromItem());
+                                    Column left = (Column) eq.getLeftExpression();
+                                    Column right = (Column) eq.getRightExpression();
+                                    
+                                    Column innerCol = null, outerCol = null;
+                                    if (left.getTable() != null && left.getTable().getName().equalsIgnoreCase(outerTable)) {
+                                        outerCol = left; innerCol = right;
+                                    } else if (right.getTable() != null && right.getTable().getName().equalsIgnoreCase(outerTable)) {
+                                        outerCol = right; innerCol = left;
+                                    }
+
+                                    if (innerCol != null && outerCol != null) {
+                                        String inSql = outerCol.toString() + " IN (SELECT " + innerCol.toString() + " FROM " + inner.getFromItem().toString() + ")";
+                                        whereExprs.set(i, CCJSqlParserUtil.parseCondExpression(inSql));
+                                        modified = true;
+                                    }
+                                }
+                            }
+                        } catch (Exception e) {}
+                    }
+                }
+            }
+
+            if (modified) {
+                body.setWhere(AstUtils.buildAndTree(whereExprs));
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "Correlated EXISTS executes nested loops per row.", "Decoupled into an IN subquery.", "MEDIUM", "Allows engine to evaluate the subquery independently as a Semi-Join.", stmt.toString(), finalSql, 0.85));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P13_ScalarSubqueryToJoin implements OptimizationPattern {
+        @Override
+        public String getId() { return "P13_SCALAR_SELECT_JOIN"; }
+        @Override
+        public String getName() { return "Scalar Subquery in SELECT -> JOIN"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            // Primarily handled by Tier 1 P01. Detection fallback.
+            return stmt.toString().toUpperCase().matches("(?s).*SELECT\\s+[^F]*\\(\\s*SELECT[^)]+\\)[^F]*FROM.*");
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            return Optional.empty(); // Safely handled by Tier 1 AST Mutator P01_CorrelatedSubquery
+        }
+    }
+
+    static class P14_FunctionOnColumn implements OptimizationPattern {
+        @Override
+        public String getId() { return "P14_FUNCTION_ON_COLUMN"; }
+        @Override
+        public String getName() { return "SARGable Predicate Rewrite"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            if (!(((Select) stmt).getSelectBody() instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) ((Select) stmt).getSelectBody();
+            if (ps.getWhere() == null) return false;
+            
+            boolean[] found = {false};
+            ps.getWhere().accept(new ExpressionVisitorAdapter() {
+                @Override
+                public void visit(EqualsTo expr) {
+                    if (expr.getLeftExpression() instanceof Function) {
+                        Function f = (Function) expr.getLeftExpression();
+                        if (f.getName() != null && "YEAR".equalsIgnoreCase(f.getName())) found[0] = true;
+                    }
+                }
+            });
+            return found[0];
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            if (!(((Select) cloned).getSelectBody() instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) ((Select) cloned).getSelectBody();
+            if (body.getWhere() == null) return Optional.empty();
+            
+            List<Expression> whereExprs = AstUtils.flattenAnds(body.getWhere());
+            boolean modified = false;
+
+            for (int i = 0; i < whereExprs.size(); i++) {
+                Expression we = whereExprs.get(i);
+                if (we instanceof EqualsTo) {
+                    EqualsTo eq = (EqualsTo) we;
+                    if (eq.getLeftExpression() instanceof Function && eq.getRightExpression() instanceof LongValue) {
+                        Function func = (Function) eq.getLeftExpression();
+                        LongValue val = (LongValue) eq.getRightExpression();
+                        
+                        if (func.getName() != null && "YEAR".equalsIgnoreCase(func.getName()) && func.getParameters() != null) {
+                            try {
+                                List<?> pList = (List<?>) func.getParameters().getClass().getMethod("getExpressions").invoke(func.getParameters());
+                                if (pList != null && !pList.isEmpty() && pList.get(0) instanceof Column) {
+                                    Column col = (Column) pList.get(0);
+                                    long year = val.getValue();
+                                    String sargableRange = col.toString() + " >= '" + year + "-01-01' AND " + col.toString() + " < '" + (year + 1) + "-01-01'";
+                                    Expression rangeExpr = CCJSqlParserUtil.parseCondExpression(sargableRange);
+                                    
+                                    whereExprs.set(i, rangeExpr);
+                                    modified = true;
+                                }
+                            } catch (Exception e) {}
+                        }
+                    }
+                }
+            }
+
+            if (modified) {
+                body.setWhere(AstUtils.buildAndTree(whereExprs));
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "Function on column disables B-Tree index usage.", "Rewrote to SARGable range predicate.", "HIGH", "Allows index seeks instead of full table scans.", stmt.toString(), finalSql, 0.95));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P15_OuterToInnerJoin implements OptimizationPattern {
+        @Override
+        public String getId() { return "P15_OUTER_TO_INNER"; }
+        @Override
+        public String getName() { return "Outer JOIN -> Inner JOIN Conversion"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            if (!(((Select) stmt).getSelectBody() instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) ((Select) stmt).getSelectBody();
+            if (ps.getJoins() == null || ps.getWhere() == null) return false;
+            
+            for (Join j : ps.getJoins()) {
+                if (j.isLeft() || j.isRight()) return true;
+            }
+            return false;
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            if (!(((Select) cloned).getSelectBody() instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) ((Select) cloned).getSelectBody();
+
+            if (body.getJoins() == null || body.getWhere() == null) return Optional.empty();
+
+            List<Expression> whereExprs = AstUtils.flattenAnds(body.getWhere());
+            Set<String> nullRejectingTables = new HashSet<>();
+
+            for (Expression expr : whereExprs) {
+                if (expr instanceof EqualsTo) {
+                    EqualsTo eq = (EqualsTo) expr;
+                    if (eq.getLeftExpression() instanceof Column && (eq.getRightExpression() instanceof StringValue || eq.getRightExpression() instanceof LongValue)) {
+                        Column c = (Column) eq.getLeftExpression();
+                        if (c.getTable() != null && c.getTable().getName() != null) nullRejectingTables.add(c.getTable().getName().toLowerCase());
+                    }
+                } else if (expr instanceof GreaterThan) {
+                    GreaterThan gt = (GreaterThan) expr;
+                    if (gt.getLeftExpression() instanceof Column && (gt.getRightExpression() instanceof StringValue || gt.getRightExpression() instanceof LongValue)) {
+                        Column c = (Column) gt.getLeftExpression();
+                        if (c.getTable() != null && c.getTable().getName() != null) nullRejectingTables.add(c.getTable().getName().toLowerCase());
+                    }
+                }
+            }
+
+            boolean modified = false;
+            for (Join join : body.getJoins()) {
+                if (join.isLeft() || join.isRight()) {
+                    String rightTable = AstUtils.getAliasOrName(join.getRightItem());
+                    if (!rightTable.isEmpty() && nullRejectingTables.contains(rightTable)) {
+                        join.setLeft(false);
+                        join.setRight(false);
+                        join.setInner(true);
+                        modified = true;
+                    }
+                }
+            }
+
+            if (modified) {
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "LEFT JOIN acts as INNER JOIN because WHERE clause rejects NULLs.", "Converted to INNER JOIN.", "MEDIUM", "Frees the execution engine to dynamically reorder joins for better performance.", stmt.toString(), finalSql, 1.0));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P16_TransitivePredicate implements OptimizationPattern {
+        @Override
+        public String getId() { return "P16_TRANSITIVE_PRED"; }
+        @Override
+        public String getName() { return "Transitive Predicate Generation"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            return false; // Safely handled by Tier 1 JPMA
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            return Optional.empty();
+        }
+    }
+
+    static class P17_RedundantJoin implements OptimizationPattern {
+        @Override
+        public String getId() { return "P17_REDUNDANT_JOIN"; }
+        @Override
+        public String getName() { return "Redundant JOIN Elimination"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            try {
+                List<String> tables = new net.sf.jsqlparser.util.TablesNamesFinder().getTableList(stmt);
+                long distinct = tables.stream().map(String::toLowerCase).distinct().count();
+                return tables.size() > distinct;
+            } catch (Exception e) { return false; }
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            return Optional.empty(); // Complex DAG analysis. Detection only for UI.
+        }
+    }
+
+    static class P18_SortElimination implements OptimizationPattern {
+        @Override
+        public String getId() { return "P18_SORT_ELIMINATION"; }
+        @Override
+        public String getName() { return "Subquery Sort Elimination"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            if (!(((Select) stmt).getSelectBody() instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) ((Select) stmt).getSelectBody();
+            
+            if (ps.getFromItem() != null) {
+                PlainSelect inner = AstUtils.getSubSelectBodyFromItem(ps.getFromItem());
+                if (inner != null && inner.getOrderByElements() != null && inner.getLimit() == null) return true;
+            }
+            return false;
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            if (!(((Select) cloned).getSelectBody() instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) ((Select) cloned).getSelectBody();
+            
+            boolean modified = false;
+
+            if (body.getFromItem() != null) {
+                PlainSelect inner = AstUtils.getSubSelectBodyFromItem(body.getFromItem());
+                if (inner != null && inner.getOrderByElements() != null && inner.getLimit() == null) {
+                    inner.setOrderByElements(null);
+                    modified = true;
+                }
+            }
+
+            if (modified) {
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "ORDER BY inside subquery without LIMIT wastes sort memory.", "Removed ORDER BY clause.", "MEDIUM", "Eliminates pointless Memory/Disk sorting phase.", stmt.toString(), finalSql, 1.0));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P19_DistinctElimination implements OptimizationPattern {
+        @Override
+        public String getId() { return "P19_DISTINCT_ELIM"; }
+        @Override
+        public String getName() { return "DISTINCT Elimination"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (stats == null || stats.isEmpty()) return false;
+            if (!(stmt instanceof Select)) return false;
+            if (!(((Select) stmt).getSelectBody() instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) ((Select) stmt).getSelectBody();
+            return ps.getDistinct() != null && ps.getJoins() == null;
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            if (stats == null) return Optional.empty();
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            if (!(((Select) cloned).getSelectBody() instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) ((Select) cloned).getSelectBody();
+            
+            if (body.getDistinct() == null || body.getJoins() != null) return Optional.empty();
+
+            boolean hasPk = false;
+            if (body.getSelectItems() != null) {
+                for (Object siObj : body.getSelectItems()) {
+                    Expression expr = AstUtils.getExpression(siObj);
+                    if (expr instanceof Column) {
+                        Column col = (Column) expr;
+                        if (col.getTable() != null && col.getTable().getName() != null) {
+                            String tableName = col.getTable().getName().toLowerCase();
+                            if (stats.containsKey(tableName)) {
+                                TableStatistics tStats = stats.get(tableName);
+                                String pk = AstUtils.getPrimaryKeyColumn(tStats);
+                                if (pk != null && pk.equalsIgnoreCase(col.getColumnName())) {
+                                    hasPk = true;
+                                    break;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            if (hasPk) {
+                body.setDistinct(null);
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "DISTINCT applied to output containing a Primary Key is redundant.", "Eliminated DISTINCT keyword.", "MEDIUM", "Removes expensive hashing since rows are mathematically guaranteed unique.", stmt.toString(), finalSql, 0.98));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P20_UnionToUnionAll implements OptimizationPattern {
+        @Override
+        public String getId() { return "P20_UNION_ALL"; }
+        @Override
+        public String getName() { return "UNION -> UNION ALL"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            String sql = stmt.toString().toUpperCase();
+            return sql.contains(" UNION ") && !sql.contains("UNION ALL");
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            return Optional.empty(); // Detection only. Requires physical data access to prove sets are disjoint.
+        }
+    }
+
+    static class P21_CountToExists implements OptimizationPattern {
+        @Override
+        public String getId() { return "P21_COUNT_TO_EXISTS"; }
+        @Override
+        public String getName() { return "COUNT(*) > 0 -> EXISTS"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            Object sBody = ((Select) stmt).getSelectBody();
+            if (!(sBody instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) sBody;
+            return ps.getWhere() != null && ps.getWhere().toString().toUpperCase().contains("COUNT(") && ps.getWhere().toString().contains(">");
+        }
+
+        @Override
+        @SuppressWarnings({"rawtypes", "unchecked"})
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            Object cBody = ((Select) cloned).getSelectBody();
+            if (!(cBody instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) cBody;
+            if (body.getWhere() == null) return Optional.empty();
+
+            List<Expression> whereExprs = AstUtils.flattenAnds(body.getWhere());
+            boolean modified = false;
+
+            for (int i = 0; i < whereExprs.size(); i++) {
+                if (whereExprs.get(i) instanceof GreaterThan) {
+                    GreaterThan gt = (GreaterThan) whereExprs.get(i);
+                    if (gt.getRightExpression() instanceof LongValue) {
+                        LongValue val = (LongValue) gt.getRightExpression();
+                        if (val.getValue() == 0) {
+                            try {
+                                PlainSelect inner = AstUtils.getSubSelectBody(gt.getLeftExpression());
+                                if (inner != null && AstUtils.hasAggregates(inner)) {
+                                    Select tempSel = (Select) CCJSqlParserUtil.parse("SELECT 1");
+                                    inner.getSelectItems().clear();
+                                    ((List) inner.getSelectItems()).add(((PlainSelect) tempSel.getSelectBody()).getSelectItems().get(0));
+                                    
+                                    Expression existsExpr = CCJSqlParserUtil.parseCondExpression("EXISTS (" + inner.toString() + ")");
+                                    whereExprs.set(i, existsExpr);
+                                    modified = true;
+                                }
+                            } catch (Exception e) {}
+                        }
+                    }
+                }
+            }
+
+            if (modified) {
+                body.setWhere(AstUtils.buildAndTree(whereExprs));
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "COUNT(*) forces a full scan to calculate total matching rows.", "Rewrote to EXISTS.", "HIGH", "EXISTS short-circuits instantly upon finding the first match.", stmt.toString(), finalSql, 0.95));
+                }
+            }
+            return Optional.empty();
+        }
+    }
+
+    static class P22_OrToUnion implements OptimizationPattern {
+        @Override
+        public String getId() { return "P22_OR_TO_UNION"; }
+        @Override
+        public String getName() { return "OR Conditions -> UNION ALL"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            Object sBody = ((Select) stmt).getSelectBody();
+            if (!(sBody instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) sBody;
+            return ps.getWhere() != null && ps.getWhere() instanceof OrExpression;
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            Object cBody = ((Select) cloned).getSelectBody();
+            if (!(cBody instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) cBody;
+            if (!(body.getWhere() instanceof OrExpression)) return Optional.empty();
+
+            try {
+                OrExpression orExpr = (OrExpression) body.getWhere();
+                
+                PlainSelect q1 = (PlainSelect) AstUtils.cloneAst(stmt).getClass().getMethod("getSelectBody").invoke(AstUtils.cloneAst(stmt));
+                PlainSelect q2 = (PlainSelect) AstUtils.cloneAst(stmt).getClass().getMethod("getSelectBody").invoke(AstUtils.cloneAst(stmt));
+                
+                q1.setWhere(orExpr.getLeftExpression());
+                
+                Expression notQ1 = CCJSqlParserUtil.parseCondExpression("NOT (" + orExpr.getLeftExpression().toString() + ")");
+                q2.setWhere(new AndExpression(orExpr.getRightExpression(), notQ1));
+
+                String unionSql = q1.toString() + " UNION ALL " + q2.toString();
+                
+                if (AstUtils.isValidSql(unionSql) && !unionSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "OR conditions on different columns prevent Index usage.", "Decomposed into UNION ALL queries.", "MEDIUM", "Each branch can now independently seek its own column Index.", stmt.toString(), unionSql, 0.85));
+                }
+            } catch (Exception e) {}
+
+            return Optional.empty();
+        }
+    }
+
+    static class P23_PredicatePushdown implements OptimizationPattern {
+        @Override
+        public String getId() { return "P23_PREDICATE_PUSHDOWN"; }
+        @Override
+        public String getName() { return "HAVING Pushdown to WHERE"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            Object sBody = ((Select) stmt).getSelectBody();
+            if (!(sBody instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) sBody;
+            return ps.getHaving() != null && AstUtils.getGroupBy(ps) == null;
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            Statement cloned = AstUtils.cloneAst(stmt);
+            if (cloned == null || !(cloned instanceof Select)) return Optional.empty();
+            Object cBody = ((Select) cloned).getSelectBody();
+            if (!(cBody instanceof PlainSelect)) return Optional.empty();
+            PlainSelect body = (PlainSelect) cBody;
+            
+            if (body.getHaving() == null || AstUtils.getGroupBy(body) != null) return Optional.empty();
+
+            try {
+                Expression having = body.getHaving();
+                body.setHaving(null);
+                
+                body.setWhere(body.getWhere() == null ? having : new AndExpression(body.getWhere(), having));
+                
+                String finalSql = cloned.toString();
+                if (AstUtils.isValidSql(finalSql) && !finalSql.equals(stmt.toString())) {
+                    return Optional.of(buildMeta(getId(), getName(), "HAVING clause filters after rows are fully fetched into memory.", "Pushed condition into WHERE clause.", "MEDIUM", "Filters rows before fetching, allowing index usage.", stmt.toString(), finalSql, 0.95));
+                }
+            } catch (Exception e) {}
+            
+            return Optional.empty();
+        }
+    }
+
+    static class P24_ProjectionPushdown implements OptimizationPattern {
+        @Override
+        public String getId() { return "P24_PROJECTION_PUSH"; }
+        @Override
+        public String getName() { return "Projection Pushdown"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            String sql = stmt.toString();
+            return sql.contains("SELECT *") || sql.contains("SELECT\n*") || sql.contains("SELECT \n*");
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            return Optional.empty(); // Purely informational warning, cannot safely guess application column requirements.
+        }
+    }
+
+    static class P25_CartesianProduct implements OptimizationPattern {
+        @Override
+        public String getId() { return "P25_CARTESIAN"; }
+        @Override
+        public String getName() { return "Cartesian Product Warning"; }
+        @Override
+        public Tier getTier() { return Tier.TIER2; }
+
+        @Override
+        public boolean detect(Statement stmt, Map<String, TableStatistics> stats) {
+            if (!(stmt instanceof Select)) return false;
+            Object sBody = ((Select) stmt).getSelectBody();
+            if (!(sBody instanceof PlainSelect)) return false;
+            PlainSelect ps = (PlainSelect) sBody;
+            
+            if (ps.getJoins() != null) {
+                for (Join j : ps.getJoins()) {
+                    if (j.isCross()) return true;
+                    if (j.isInner() && j.getOnExpression() == null && ps.getWhere() == null) return true;
+                }
+            }
+            return false;
+        }
+
+        @Override
+        public Optional<OptimizationResult.PatternApplication> apply(Statement stmt, Map<String, TableStatistics> stats) {
+            return Optional.empty(); // Impossible to infer business logic join condition mathematically.
+        }
     }
 }
